--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="home">Home</string>
     <string name="logout">Logout</string>
     <string name="refresh">Refresh</string>
+    <string name="to_home">to Home</string>
 </resources>
