--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,5 @@
     <string name="to_home">to Home</string>
     <string name="close">Close</string>
     <string name="toWebview">Open WebView</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sort">Sort</string>
 </resources>
